--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@polymer/iron-meta": "3.0.1",
     "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.5.1",
+    "@types/jquery": "3.5.16",
+    "@vaadin-component-factory/vcf-nav": "1.0.6",
     "@vaadin/accordion": "23.3.7",
     "@vaadin/app-layout": "23.3.7",
     "@vaadin/avatar": "23.3.7",
@@ -119,8 +121,11 @@
     "@vaadin/virtual-list": "23.3.7",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
+    "jquery": "3.6.0",
+    "line-awesome": "1.3.0",
     "lit": "2.6.1",
-    "proj4": "2.8.1"
+    "proj4": "2.8.1",
+    "summernote": "0.8.20"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "3.1.0",
@@ -257,7 +262,12 @@
     "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
     "proj4": "$proj4",
     "@vaadin/tabsheet": "$@vaadin/tabsheet",
-    "@vaadin/tooltip": "$@vaadin/tooltip"
+    "@vaadin/tooltip": "$@vaadin/tooltip",
+    "@types/jquery": "$@types/jquery",
+    "line-awesome": "$line-awesome",
+    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
+    "jquery": "$jquery",
+    "summernote": "$summernote"
   },
   "vaadin": {
     "dependencies": {
@@ -267,6 +277,8 @@
       "@polymer/iron-meta": "3.0.1",
       "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.5.1",
+      "@types/jquery": "3.5.16",
+      "@vaadin-component-factory/vcf-nav": "1.0.6",
       "@vaadin/accordion": "23.3.7",
       "@vaadin/app-layout": "23.3.7",
       "@vaadin/avatar": "23.3.7",
@@ -378,8 +390,11 @@
       "@vaadin/virtual-list": "23.3.7",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
+      "jquery": "3.6.0",
+      "line-awesome": "1.3.0",
       "lit": "2.6.1",
-      "proj4": "2.8.1"
+      "proj4": "2.8.1",
+      "summernote": "0.8.20"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "3.1.0",
@@ -397,6 +412,6 @@
       "workbox-core": "6.5.4",
       "workbox-precaching": "6.5.4"
     },
-    "hash": "745b38194bab250a3dc9f77cfa90180d3654aadaab709d603e18e98dddaf0bbb"
+    "hash": "3a183febaa1b686675ee47054eed0b1d54a523a1cedee6f1b788a6de35e40a4b"
   }
 }
